Add some notes on what I changed to enable walk of Clojure var